recursion.lessons.recursion.tree.Tree.scala.error
Tree:3: error: ':' expected but ')' found.
def current(step)
                ^Tree:26: error: identifier expected but '}' found.
}
^