recursion.lessons.recursion.tree.Tree.scala.code
def tree(steps:Int, length:Double, angle:Double, shrink:Double)    {
def current(step)
avance(length)
droite(angle)	

if (step==0) {
			return  } 
	
	else {	
		
		
		avance(length); 
			droite(angle)
			avance(length*shrink)
			
			
			
			
			}


	
	

}

